hphp/hack/test/typecheck/xhp_attr_3.php
<?hh // partial
function test($obj) {
  // Using ->: syntax for writing is not supported for now
  $obj->:foo = 123;
}
